# Aigent

./: README.md  package-lock.json  render.yaml  turbo_workflow_1.json  turbo_workflow_2.json
.github/workflows/: ci.yml
aigent/: package-lock.json  package.json  render.yaml
aigent/apps/backend/: .env.example  Dockerfile  main.py  package.json  pyproject.toml
aigent/apps/web/: package.json  tailwind.config.ts  tailwind.config.ts.bak
aigent/seeder/: python.py  sql.sql
apps/backend/: .dockerignore  .env.example  Dockerfile  debug_ws.py  main.py  pyproject.toml  render.yaml
apps/backend/app/: config.py  database.py  dependencies.py
apps/backend/app/agents/: graph.py  insight.py  llm.py  query_planner.py  sql_executor.py  sql_writer.py  state.py  supervisor.py  visualization.py
apps/backend/app/models/: __init__.py  company.py  conversation.py  database_connection.py  report.py  user.py
apps/backend/app/routers/: __init__.py  agent.py  auth.py  chat.py  companies.py  connections.py  conversations.py  dashboard.py  health.py  reports.py  users.py
apps/backend/app/schemas/: __init__.py  auth.py  company.py  conversation.py  database_connection.py
apps/backend/app/services/: __init__.py  auth.py  cache.py  chat.py  connection_manager.py  encryption.py
apps/backend/seeder/: python.py
apps/docs/app/: layout.tsx  page.tsx
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/components/: BackendWarmingBanner.tsx  CardSwap.tsx  Threads.tsx  chart-renderer.tsx  chat-message.tsx  db-dashboard.tsx
apps/web/lib/: api.ts  demo.tsx  (+1 more)
(+80 files in other folders)
